<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
         tools:context="com.example.android.navigation.zoneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ZoneFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img2" />

<!--        android:background="-->
        <Button
            android:id="@+id/northern_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/northern_button"
            android:background="@drawable/cutcom_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/northeastern_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/northeastern_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/northeastern_button"
            android:background="@drawable/cutcom_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/central_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/northern_button" />

        <Button
            android:id="@+id/central_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/central_button"
            android:background="@drawable/cutcom_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/easter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/northeastern_button" />

        <Button
            android:id="@+id/easter_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/easter_button"
            android:background="@drawable/cutcom_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/southern_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/central_button" />

        <Button
            android:id="@+id/southern_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/southern_button"
            android:background="@drawable/cutcom_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/easter_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>
